Changes towards version 0.3:
- Vux warps in close (fixes bug 93) -from Nic
- Fixed lockup on lander-report (Bug #144 annd 187?)
- Version # is now printed in the main menu, from Nic
- Added PC Shipyard + Hangar power lines animation;
  (closes #176) -fOSSiL

0.2:
- Shipyard/Outfit screens now use larger PC graphics;
  Outfit blueprint is properly aligned; from Nic
- Key config is now saved in user dir too.
  melee.cfg too again. - SvdB
- Added copyFile() - SvdB
- Pure mode partial screen updates are now more efficient;
  fixed 'crossfades not finished' problem -Mika
- Graduated colours for crew in shipyard, from Nic
- Alien dialog fixes: Talking Pet, Utwig, Mycon, Syreen -fOSSiL
- Updated all game, menu, melee and weapon sounds to original 3DO
  ones (extracted using various tools); some sounds were simply
  wrong: menu - "device success", weapons - arilou, slylandro, thraddash;
  others had bad sampling rates; (fixes #19) -fOSSiL
- Fixed Melnrome repeating "Please do not mention this subject again"
  text (bug #145) -fOSSiL
- Fixed load/save screen leaving characters when having more
  than 1000 units of some type of resources (bug #75) -fOSSiL
- Lowered Drawable memory footprint, made Frame safer - Martin
- Support for running without voice .ogg files present -PBlue
- Slider should now work correctly everywhere -PhracturedBlue
- Added 'nosound' driver and --sound=openal|mixsdl|none
  option; -a option has been removed -fOSSiL
- Fix ZFP stuttering and some other random sound issues -PBlue
- Correctly deal with multiply-mapped keys.  This may fix some keys
  not being detected correctly on the Mac as well - PBlue
- OpenGL mode now fully supports partial screen updates -Mika
- Fixed melee ship selection-box bugs -fOSSiL
- Added a 4th button to starcon.key 'Esc' now emergency-escapes -PBlue
- Biadapt and biadv scalers now work in OpenGL mode too -Mika
- Fixed lockup when fastforwarding through orz comm -PBlue